Modified Uploads Working

--- a/photobomb/imagine/templates/list.html
+++ b/photobomb/imagine/templates/list.html
@@ -26,10 +26,15 @@
 
             <p>
                 {{ form.docfile.errors }}
+            <br>
+                Heading: {{ form.heading }}
+            <br>
+                Footer: {{ form.footer }}
+            <br>
                 {{ form.docfile }}
             </p>
 
-            <p><input type="submit" value="Upload"/></p>
+	     <p><input type="submit" value="Submit"/></p>
         </form>
     </body>
 
